[gd_scene load_steps=7 format=3 uid="uid://cq1rqg7180fnn"]

[ext_resource type="Script" path="res://Player.gd" id="1_wd3cx"]
[ext_resource type="AudioStream" uid="uid://cchoyfhaspv6q" path="res://levels/SFX - Death Explosion.ogg" id="2_bhhp2"]
[ext_resource type="AudioStream" uid="uid://cpwra0cs8d2bw" path="res://levels/SFX - Success.ogg" id="3_pn116"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6sorf"]
albedo_color = Color(0.717647, 0.717647, 0, 1)
metallic = 0.46
roughness = 0.52

[sub_resource type="CylinderMesh" id="CylinderMesh_qyd43"]
material = SubResource("StandardMaterial3D_6sorf")

[sub_resource type="CylinderShape3D" id="CylinderShape3D_m0kjb"]

[node name="Player" type="RigidBody3D"]
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
max_contacts_reported = 10
contact_monitor = true
linear_damp = 1.0
angular_damp = 3.0
script = ExtResource("1_wd3cx")
torque_thrust = 200.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CylinderMesh_qyd43")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_m0kjb")

[node name="ExplosionAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_bhhp2")

[node name="SuccessAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_pn116")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
